--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,8 @@
+body{
+    background: #edeef0;
+}
 .wrap{
+    width: 100%;
     max-width: 1280px;
     padding: 0px 40px 0px 40px;
     @include r(1340){
@@ -6,38 +10,21 @@
     }
 }
 
-.header{
+.content{
+    margin-top: 50px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: #333;
-    height: 50px;
+    width: 100%;
+
     &-wrap{
-        width: 100%;
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    &-logo{
-        color: white;
-        font-weight: 800;
-        font-size: 24px;
-        cursor: pointer;
-    }
-    &-menu{
-        display: flex;
-        flex-direction: row;
         justify-content: center;
-        align-content: center;
     }
-    &-item{
-        color: white;
-        margin-left: 50px;
-        font-weight: 400;
-        cursor: pointer;
-        &:hover{
-            
-        }
-    }
+    &-right{
+        width: calc(100% - 150px);
+        padding-left: 40px;
+            @include r(1340){
+                padding-left: 20px;
+            }
+    } 
 }
