--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -12,5 +12,10 @@
     a{
         text-decoration: none;
         color: black;
+      //transition: color $t;
+      &.active{
+        color: darkslateblue;
+        //transition: color $t;
+      }
     }
 }
