--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@ body{
 }
 .wrap{
     width: 100%;
-    max-width: 1280px;
+    max-width: 992px;
     padding: 0px 40px 0px 40px;
     @include r(1340){
         padding: 0px 20px 0px 20px;
@@ -27,4 +27,12 @@ body{
                 padding-left: 20px;
             }
     } 
+}
+
+*{
+    box-sizing: border-box;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
