--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -1,5 +1,5 @@
 @mixin r($point) {
-    @media (max-width: $point) { @content; }
+    @media (max-width: $point + px) { @content; }
 }
 
 .body{
@@ -18,21 +18,46 @@
     padding: 15px;
     display: flex;
     justify-content: flex-start;
+
+    @include r(420){
+        flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    }
 }
 .avatar{
     height: 200px;
     width: 200px;
     border-radius: 100%;
-
+    box-shadow: 0 0 10px rgba(black, .3);
+    @include r(768){
+        width: 120px;
+        height: 120px;
+    }
+    @include r(420){
+        width: 100px;
+        height: 100px;
+        
+    }
 }
 .avatar[src=""]{
     background: rgba(#000, .2);
 }
 .description{
     padding-left: 20px;
+    padding-top: 10px;
+    overflow: hidden;
+    @include r(420){
+        padding-left: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 .name{
     font-size: 20px;
+    font-weight: 500;
 }
 .excerpt{
     font-size: 14px;
