--- a/src/components/Dialogs/DialogItem/DialogItem.module.scss
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.scss
@@ -1,3 +1,7 @@
+@mixin r($point) {
+    @media (max-width: $point + px) { @content; }
+}
+
 .block{
     position: relative;
     background: #fff;
@@ -27,7 +31,10 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
+        @include r(600){
+            margin-bottom: 0;
+        }
         &:last-child{
             margin-bottom: 0;
         }
@@ -35,10 +42,18 @@
 }
 
 .img{
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
     height: 60px;
     width: 60px;
     border-radius: 100%;
+    @include r(600){
+        margin-right: 15px;
+    }
+    @include r(420){
+        height: 50px;
+        width: 50px;
+        margin-right: 10px;
+    }
 }
 
 .messages{
