--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -1,3 +1,7 @@
+@mixin r($point) {
+    @media (max-width: $point + px) { @content; }
+}
+
 .block{
     position: relative;
     background: #fff;
@@ -7,12 +11,18 @@
     padding: 15px;
     display: flex;
     justify-content: flex-start;
+    @include r(600){
+       
+    }
 }
 
 .section{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    @include r(600){
+        flex-direction: column;
+    }
 }
 
 .dialogs{
@@ -22,12 +32,21 @@
     max-height: calc(100vh - 200px);
     height: 100%;
     overflow: scroll;
+
+    @include r(600){
+        overflow: auto;
+        margin-right: 0;
+        flex-direction: row;
+        width: 100%;
+    }
     &_item{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         margin-bottom: 20px;
+
+        
         &:last-child{
             margin-bottom: 0;
         }
@@ -77,4 +96,23 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.writearea{
+    width: 100%;
+    height: 50px;
+
+    @include r(420){
+        font-size: 12px;
+        height: 45px;
+    }
+    &:focus{
+        &::placeholder{
+            color: transparent;
+            transition: color .3s;
+        }
+    }
+    &::placeholder{
+        transition: color .3s;
+    }
 }
