--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 @mixin r($point) {
-    @media (max-width: $point) { @content; }
+    @media (max-width: $point + px) { @content; }
 }
 
 .header{
@@ -40,7 +40,62 @@
     font-weight: 400;
     cursor: pointer;
     font-size: 14px;
+
+    @include r(420){
+        margin-left: 30px;
+    }
     &:hover{
 
+    }
+}
+
+.footer{
+    display: none;
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    height: 50px;
+    z-index: 99;
+    @include r(600){
+        display: flex;
+        justify-content: space-around;
+    }
+}
+
+.link{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+
+    &:nth-child(1){
+        &:before{
+            font-size: 20px !important;
+        margin-bottom: 2px;
+        }
+    }
+    &:nth-child(2){
+        &:before{
+            font-size: 20px !important;
+        margin-bottom: 2px;
+        }
+    }
+    &:nth-child(3){
+        &:before{
+            font-size: 20px !important;
+        margin-bottom: 2px;
+        }
+    }
+    &:nth-child(4){
+        &:before{
+            font-size: 20px !important;
+        margin-bottom: 2px;
+        }
     }
 }
