--- a/src/components/Profile/Posts/Post/Post.module.scss
+++ b/src/components/Profile/Posts/Post/Post.module.scss
@@ -1,3 +1,7 @@
+@mixin r($point) {
+    @media (max-width: $point + px) { @content; }
+}
+
 .block{
     position: relative;
     background: #fff;
@@ -13,8 +17,50 @@
     height: 60px;
     width: 60px;
     border-radius: 100%;
+    @include r(420){
+        width: 50px;
+        height: 50px;
+    }
 }
 
 .text{
     
+}
+
+.right{
+    padding-left: 15px;
+}
+
+.name{
+    font-weight: 500;
+    @include r(600){
+        font-size: 14px;
+    }
+}
+.text{
+    font-size: 14px;
+    margin-top: 5px;
+    // width: calc(100% - 30px);
+    @include r(600){
+        font-size: 12px;
+    }
+}
+.like{
+    position: absolute;
+    bottom: 15px;
+    right: 20px;
+    font-size: 14px;
+    cursor: pointer;
+    @include r(600){
+        font-size: 12px;
+    }
+    &:before{
+        font-size: 12px;
+    font-weight: 600;
+    margin-right: 2px;
+    @include r(600){
+        font-size: 10px;
+    }
+    }
+
 }
