--- a/src/components/Profile/Posts/Posts.module.scss
+++ b/src/components/Profile/Posts/Posts.module.scss
@@ -1,3 +1,7 @@
+@mixin r($point) {
+    @media (max-width: $point + px) { @content; }
+}
+
 .block{
     position: relative;
     background: #fff;
@@ -7,4 +11,22 @@
     padding: 15px;
     display: flex;
     justify-content: flex-start;
+}
+.textarea{
+    width: 100%;
+    height: 50px;
+
+    @include r(420){
+        font-size: 12px;
+        height: 45px;
+    }
+    &:focus{
+        &::placeholder{
+            color: transparent;
+            transition: color .3s;
+        }
+    }
+    &::placeholder{
+        transition: color .3s;
+    }
 }
