--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,7 @@
 body{
     background: #edeef0;
+    height: 100vh;
+    overflow: hidden;
 }
 .wrap{
     width: 100%;
@@ -26,13 +28,30 @@ body{
             @include r(1340){
                 padding-left: 20px;
             }
+            @include r(768){
+                width: calc(100% - 100px);
+            }
+            @include r(600){
+                padding: 0;
+                width: 100%;
+            }
     } 
 }
 
 *{
     box-sizing: border-box;
+    font-family: $montserat;
+    font-weight: 400;
 }
 a{
     text-decoration: none;
     color: black;
+}
+
+input,
+textarea{
+    -webkit-appearance: none;
+    border: none;
+    outline: none;
+    resize: none;
 }
