--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 body{
     background: #edeef0;
-    height: 100vh;
-    overflow: hidden;
+    // height: 100vh;
+    // overflow: hidden;
 }
 .wrap{
     width: 100%;
@@ -21,6 +21,10 @@ body{
     &-wrap{
         display: flex;
         justify-content: center;
+        padding-bottom: 40px;
+        @include r(600){
+            padding-bottom: 70px;
+        }
     }
     &-right{
         width: calc(100% - 150px);
