--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,6 +27,13 @@
     font-weight: 800;
     font-size: 24px;
     cursor: pointer;
+    text-transform: uppercase;
+    display: flex;
+    user-select: none;
+    span{
+        font-weight: 900;
+        transform: translateY(-1px);
+    }
 }
 .menu{
     display: flex;
