--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,31 +1,62 @@
 @import "../../scss/resources.scss";
 
-.sidebar{
-        width: 150px;
-        max-width: 150px;
-        // border-right: 1px solid rgba(#000 , .2);
-        padding-top: 20px;
+.sidebar {
+  width: 150px;
+  max-width: 150px;
+  // border-right: 1px solid rgba(#000 , .2);
+  padding-top: 20px;
 
-        @include r(768){
-          width: 100px;
-          max-width: 100px;
-        }
-        @include r(600){
-          display: none;
-        }
-    }
-.item{
-    height: 26px;
-    font-size: 14px;
-    
+  @include r(768) {
+    width: 100px;
+    max-width: 100px;
+  }
 
-    a{
-        text-decoration: none;
-        color: black;
-      //transition: color $t;
-      &.active{
-        color: darkslateblue;
-        //transition: color $t;
-      }
+  @include r(600) {
+    display: none;
+  }
+}
+
+.item {
+  height: 26px;
+  font-size: 14px;
+  display: flex;
+  position: relative;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+  &:before {
+    font-size: 15px;
+    margin-right: 7px;
+    transform: translateY(2px);
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    height: 82%;
+    width: 100%;
+    top: -2%;
+    left: -5px;
+    border-radius: 3px;
+    background-color: rgba(15, 15, 15, 0);
+    transition: background-color .3s;
+    z-index: -1;
+    cursor: pointer;
+  }
+
+  &:hover {
+    &:after {
+      background-color: rgba(15, 15, 15, 0.06);
+      transition: background-color .3s;
     }
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+
+    //transition: color $t;
+    &.active {}
+  }
 }
