--- a/src/components/Profile/Posts/Posts.module.scss
+++ b/src/components/Profile/Posts/Posts.module.scss
@@ -7,26 +7,85 @@
     background: #fff;
     border-radius: 4px;
     box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
-    margin: 15px 0 0;
+    margin: 0 0 0;
     padding: 15px;
     display: flex;
     justify-content: flex-start;
+    resize: none;
+    box-sizing: content-box;
 }
 .textarea{
     width: 100%;
-    height: 50px;
-
+    height: 22px;
+    transition: width .3s;
     @include r(420){
         font-size: 12px;
-        height: 45px;
+        height: 18px;
     }
+
     &:focus{
         &::placeholder{
             color: transparent;
             transition: color .3s;
         }
+        
     }
+
+    &:not(:empty){
+        width: calc(100% - 80px);
+        transition: width .3s;
+        ~ .buttonWrapper{
+            opacity: 1;
+            width: 40px;
+            visibility: visible;
+            transition: opacity .3s, width .3s;
+        }
+    }
+
     &::placeholder{
         transition: color .3s;
     }
+}
+
+.buttonWrapper{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+   height: 40px;
+    visibility: hidden;
+    opacity: 0;
+    width: 0;
+    transition: opacity .3s, width .3s;
+    
+}
+
+.buttonSend{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    height: 40px;
+    width: 40px;
+    position: relative;
+    z-index: 99;
+    color: white;
+    font-size: 14px;
+    border: none;
+    border-radius: 100%;
+    // margin-left: 10px;
+
+    &:before{
+position: absolute;
+left: 50%;
+top: 50%;
+transform: translate(-50%, -50%);
+font-size: 16px;
+    }
+}
+
+.textareaWrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
 }
