user styles + main styles finished

--- a/src/components/Dialogs/DialogItem/DialogItem.module.scss
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.scss
@@ -46,6 +46,7 @@
     height: 60px;
     width: 60px;
     border-radius: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     @include r(600){
         margin-right: 15px;
     }
