--- a/src/components/Dialogs/Message/Message.module.scss
+++ b/src/components/Dialogs/Message/Message.module.scss
@@ -22,7 +22,8 @@
 
 .message{
     padding: 10px 15px;
-    background: rgba(rgb(150, 178, 255), .2);
+
+    background: rgba(255, 239, 239, 1);
     border-radius: 20px;
     display: flex;
     margin-bottom: 10px;
@@ -35,6 +36,7 @@
     &.right{
         display: flex;
         align-self: flex-end;
+        background: rgba(234, 240, 255, 1);
     }
 }
 .name{
