class component + styles

--- a/src/components/Dialogs/Message/Message.module.scss
+++ b/src/components/Dialogs/Message/Message.module.scss
@@ -22,7 +22,7 @@
 
 .message{
     padding: 10px 15px;
-
+min-height: 38px;
     background: rgba(255, 239, 239, 1);
     border-radius: 20px;
     display: flex;
