--- a/src/components/Profile/Posts/Post/Post.module.scss
+++ b/src/components/Profile/Posts/Post/Post.module.scss
@@ -8,7 +8,7 @@
     border-radius: 4px;
     box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
     margin: 15px 0 0;
-    padding: 15px;
+    padding: 15px 15px 30px 15px;
     display: flex;
     justify-content: flex-start;
 }
@@ -47,12 +47,15 @@
 }
 .like{
     position: absolute;
-    bottom: 15px;
-    right: 20px;
+    top: 80px;
+    left: 20px;
     font-size: 14px;
     cursor: pointer;
     @include r(600){
         font-size: 12px;
+    }
+    @include r(420){
+        top: 70px;
     }
     &:before{
         font-size: 12px;
@@ -62,5 +65,26 @@
         font-size: 10px;
     }
     }
-
+}
+.repost{
+    position: absolute;
+    top: 80px;
+    left: 50px;
+    font-size: 14px;
+    cursor: pointer;
+    @include r(600){
+        font-size: 12px;
+    }
+    @include r(420){
+        top: 70px;
+    }
+    &:before{
+        color: black;
+        font-size: 12px;
+    font-weight: 600;
+    margin-right: 2px;
+    @include r(600){
+        font-size: 10px;
+    }
+    }
 }
