--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@ body{
     width: 100%;
     max-width: 992px;
     padding: 0px 40px 0px 40px;
+    overflow-x: hidden;
     @include r(1340){
         padding: 0px 20px 0px 20px;
     }
