--- a/src/components/Profile/Posts/Post/Post.module.scss
+++ b/src/components/Profile/Posts/Post/Post.module.scss
@@ -76,7 +76,8 @@
         font-size: 12px;
     }
     @include r(420){
-        top: 70px;
+        top: 85px;
+        left: 20px;
     }
     &:before{
         color: black;
