--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -88,3 +88,14 @@
     margin-top: 5px;
     height: 100%;
 }
+
+.selected{
+    font-weight: bold;
+}
+ 
+.pagi{
+    span{
+        margin-right: 5px;
+        cursor: pointer;
+    }
+}
