--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,108 +1,160 @@
 @mixin r($point) {
-    @media (max-width: $point + px) { @content; }
+  @media (max-width: $point + px) {
+    @content;
+  }
 }
 
-.header{
-    position: fixed;
-    width: 100vw;
-    top: 0;
-    left: 0;
+.header {
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  height: 50px;
+  z-index: 99;
+}
+
+.wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  color: white;
+  font-weight: 800;
+  font-size: 24px;
+  cursor: pointer;
+  text-transform: uppercase;
+  display: flex;
+  user-select: none;
+
+  span {
+    font-weight: 900;
+    transform: translateY(-1px);
+  }
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+
+.item {
+  color: white;
+  margin-left: 40px;
+  font-weight: 400;
+  cursor: pointer;
+  font-size: 14px;
+
+  @include r(420) {
+    margin-left: 30px;
+  }
+
+  &:hover {
+
+  }
+}
+
+.footer {
+  display: none;
+  position: fixed;
+  width: 100vw;
+  bottom: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  height: 50px;
+  z-index: 99;
+  @include r(600) {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #333;
-    height: 50px;
-    z-index: 99;
+    justify-content: space-around;
+  }
 }
 
-.wrap{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo{
-    color: white;
-    font-weight: 800;
-    font-size: 24px;
-    cursor: pointer;
-    text-transform: uppercase;
-    display: flex;
-    user-select: none;
-    span{
-        font-weight: 900;
-        transform: translateY(-1px);
-    }
-}
-.menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-}
-.item{
-    color: white;
-    margin-left: 40px;
-    font-weight: 400;
-    cursor: pointer;
-    font-size: 14px;
+.link {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
 
-    @include r(420){
-        margin-left: 30px;
+  &:nth-child(1) {
+    &:before {
+      font-size: 20px !important;
+      margin-bottom: 2px;
     }
-    &:hover{
+  }
 
+  &:nth-child(2) {
+    &:before {
+      font-size: 20px !important;
+      margin-bottom: 2px;
     }
+  }
+
+  &:nth-child(3) {
+    &:before {
+      font-size: 20px !important;
+      margin-bottom: 2px;
+    }
+  }
+
+  &:nth-child(4) {
+    &:before {
+      font-size: 20px !important;
+      margin-bottom: 2px;
+    }
+  }
 }
 
-.footer{
-    display: none;
-    position: fixed;
-    width: 100vw;
-    bottom: 0;
-    left: 0;
-    justify-content: center;
-    align-items: center;
-    background-color: #333;
-    height: 50px;
-    z-index: 99;
-    @include r(600){
-        display: flex;
-        justify-content: space-around;
-    }
-}
+.nightModeSwitch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: -20px;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  position: relative;
 
-.link{
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
+  svg {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity .3s, visibility .3s;
+  }
 
-    &:nth-child(1){
-        &:before{
-            font-size: 20px !important;
-        margin-bottom: 2px;
-        }
+  .day {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity .3s, visibility .3s;
+  }
+
+  &.active {
+    .day {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: all;
+      transition: opacity .3s, visibility .3s;
     }
-    &:nth-child(2){
-        &:before{
-            font-size: 20px !important;
-        margin-bottom: 2px;
-        }
+
+    .night {
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+      transition: opacity .3s, visibility .3s;
     }
-    &:nth-child(3){
-        &:before{
-            font-size: 20px !important;
-        margin-bottom: 2px;
-        }
-    }
-    &:nth-child(4){
-        &:before{
-            font-size: 20px !important;
-        margin-bottom: 2px;
-        }
-    }
+  }
 }
