--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -57,6 +57,9 @@
   @include r(420) {
     margin-left: 30px;
   }
+  @include r(375) {
+    margin-left: 20px;
+  }
 
   &:hover {
 
@@ -126,7 +129,9 @@
   height: 20px;
   width: 20px;
   position: relative;
-
+@include r(375) {
+  margin-right: -10px;
+  }
   svg {
     position: absolute;
     left: 50%;
