--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -4,7 +4,8 @@
   width: 150px;
   max-width: 150px;
   // border-right: 1px solid rgba(#000 , .2);
-  padding-top: 20px;
+  padding-top: 15px;
+  position: relative;
 
   @include r(768) {
     width: 120px;
@@ -14,6 +15,9 @@
   @include r(600) {
     display: none;
   }
+}
+.sidebarFixed{
+  position: fixed;
 }
 
 .item {
@@ -32,7 +36,7 @@
     content: "";
     position: absolute;
     height: 82%;
-    width: 100%;
+    width: 25px;
     top: -2%;
     left: -5px;
     border-radius: 3px;
@@ -44,7 +48,7 @@
 
   &:hover {
     &:after {
-      background-color: rgba(15, 15, 15, 0.06);
+      background-color: rgba(15, 15, 15, 0.08);
       transition: background-color .3s;
     }
   }
