--- a/src/components/Dialogs/Message/Message.module.scss
+++ b/src/components/Dialogs/Message/Message.module.scss
@@ -1,45 +1,55 @@
-@mixin r($point) {
-    @media (max-width: $point + px) { @content; }
+@import "../../../scss/resources";
+
+.img {
+  margin-bottom: 5px;
+  height: 60px;
+  width: 60px;
+  border-radius: 100%;
 }
 
-.img{
-    margin-bottom: 5px;
-    height: 60px;
-    width: 60px;
-    border-radius: 100%;
+.messages {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  max-height: calc(100vh - 200px);
+  height: 100%;
+  overflow: scroll;
+  box-sizing: border-box;
 }
 
-.messages{
-    width: 100%;
+.message {
+  padding: 10px 15px;
+  min-height: 38px;
+  background: rgba(255, 239, 239, 1);
+  border-radius: 20px;
+  display: flex;
+  margin-bottom: 10px;
+  font-size: 14px;
+  position: relative;
+  z-index: 4;
+  @include r(420) {
+    font-size: 12px;
+  }
+
+  &.right {
     display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    max-height: calc(100vh - 200px);
-    height: 100%;
-    overflow: scroll;
-    box-sizing: border-box;
+    align-self: flex-end;
+    background: rgba(234, 240, 255, 1);
+  }
 }
 
-.message{
-    padding: 10px 15px;
-min-height: 38px;
-    background: rgba(255, 239, 239, 1);
-    border-radius: 20px;
-    display: flex;
-    margin-bottom: 10px;
-    font-size: 14px;
-    position: relative;
-    z-index: 4;
-    @include r(420){
-        font-size: 12px;
-    }
-    &.right{
-        display: flex;
-        align-self: flex-end;
-        background: rgba(234, 240, 255, 1);
-    }
+.name {
+  font-size: 14px;
+
 }
-.name{
-    font-size: 14px;
-    
+
+@include nignt {
+  .message {
+    background: $nightOrange;
+
+    &.right {
+      background: $nightBlue;
+    }
+  }
 }
