--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -1,135 +1,151 @@
 @import "../../scss/resources.scss";
 
 .wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    width: 100%;
-    flex-flow: row wrap;
-    position: relative;
-    &:after {
-        content: "";
-        width: calc(33.333% - 15px);
-        @include r(920){
-            width: calc(50% - 10px);
-        }
-        @include r(480){
-            width: 100%;
-        }
-      }
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 100%;
+  flex-flow: row wrap;
+  position: relative;
+
+  &:after {
+    content: "";
+    width: calc(33.333% - 15px);
+    @include r(920) {
+      width: calc(50% - 10px);
+    }
+    @include r(480) {
+      width: 100%;
+    }
+  }
 }
 
 .item {
-    width: calc(33.333% - 15px);
+  width: calc(33.333% - 15px);
 
-    position: relative;
-    background: #fff;
-    border-radius: 4px;
-    box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
-    margin: 15px 0 0;
-    padding: 15px;
+  position: relative;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
+  margin: 15px 0 0;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex-grow: 1 auto;
+  @include r(920) {
+    width: calc(50% - 10px);
+  }
+  @include r(480) {
+    width: 100%;
+  }
+
+  button {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    flex-grow: 1 auto;
-    @include r(920){
-        width: calc(50% - 10px);
-    }
-    @include r(480){
-        width: 100%;
-    }
-
-    button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #333;
-        min-height: 30px;
-        width: auto;
-        padding: 0 15px;
-        border: none;
-        outline: none;
-        color: white;
-        border-radius: 3px;
-        font-size: 14px;
-        font-weight: 600;
-        margin-top: 10px;
-        line-height: 1;
-    }
+    background-color: #333;
+    min-height: 30px;
+    width: auto;
+    padding: 0 15px;
+    border: none;
+    outline: none;
+    color: white;
+    border-radius: 3px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 10px;
+    line-height: 1;
+  }
 }
 
 .img {
-    min-height: 100px;
-    min-width: 100px;
-    max-width: 100px;
-    border-radius: 100%;
-    background-size: cover;
-    background-position: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    margin: 0 auto;
+  min-height: 100px;
+  min-width: 100px;
+  max-width: 100px;
+  border-radius: 100%;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
 }
 
 .name {
-    font-size: 18px;
-    margin-top: 10px;
-    line-height: 1.25;
-    text-align: center;
+  font-size: 18px;
+  margin-top: 10px;
+  line-height: 1.25;
+  text-align: center;
 }
 
 .country {
-    color: rgba(#000, .6);
-    font-size: 14px;
-    text-align: center;
+  color: rgba(#000, .6);
+  font-size: 14px;
+  text-align: center;
 }
 
 .status {
-    text-align: center;
-    font-size: 14px;
-    line-height: 1.3;
-    margin-top: 5px;
-    height: 100%;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.3;
+  margin-top: 5px;
+  height: 100%;
 }
 
-.selected{
-    font-weight: bold;
+.selected {
+  font-weight: bold;
 }
 
- 
-.pagi{
-    span{
+
+.pagi {
+  span {
+    margin-right: 5px;
+    cursor: pointer;
+
+    &.naviBack {
+      margin-right: 10px;
+      @include r(480) {
         margin-right: 5px;
-        cursor: pointer;
-        &.naviBack{
-            margin-right: 10px;
-            @include r(480){
-                margin-right: 5px;
-            }
-        }
-        &.naviNext{
-            margin-left: 5px;
-            margin-right: 0;
-            @include r(480){
-                margin-left: 0px;
-                
-            }
-        }
+      }
     }
-    overflow: hidden;
-    position: relative;
-    background: #fff;
-    border-radius: 4px;
-    box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
-    margin: 15px 0 0;
-    padding: 15px;
-    display: inline-flex;
-    @include r(480){
-        display: flex;
-        justify-content: center;
-        align-items: center;
+
+    &.naviNext {
+      margin-left: 5px;
+      margin-right: 0;
+      @include r(480) {
+        margin-left: 0px;
+
+      }
     }
-    @include r(360){
-        font-size: 11.5px;
+  }
+
+  overflow: hidden;
+  position: relative;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
+  margin: 15px 0 0;
+  padding: 15px;
+  display: inline-flex;
+  @include r(480) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  @include r(360) {
+    font-size: 11.5px;
+  }
+}
+
+@include nignt {
+  .item, .pagi {
+    background: $nightLightGrey;
+    box-shadow: 0 1px 0 0 $nightLightGrey, 0 0 0 1px $nightLightGrey;
+  }
+    .item{
+        button{
+            background-color: $nightOrange;
+        }
     }
 }
 
