--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,11 @@
 body{
     background: #edeef0;
-    // height: 100vh;
-    // overflow: hidden;
+    &[theme="night"]{
+        background: $nightGrey;
+        *{
+            color: #ffffff;
+        }
+    }
 }
 .wrap{
     width: 100%;
@@ -60,3 +64,4 @@ textarea{
     outline: none;
     resize: none;
 }
+
