--- a/src/scss/resources.scss
+++ b/src/scss/resources.scss
@@ -1,6 +1,25 @@
+//mixins
 @mixin r($point) {
-    @media (max-width: $point + px) { @content; }
+  @media (max-width: $point + px) {
+    @content;
+  }
 }
 
-$t : .3s;
-$montserat : 'Open Sans';
+@mixin nignt {
+  body {
+    &[theme="night"] {
+      @content;
+    }
+  }
+}
+
+//vars
+$t: .3s;
+$montserat: 'Open Sans';
+
+//colors
+$nightBlack: #313131;
+$nightGrey: #414141;
+$nightLightGrey: #525252;
+$nightOrange: #ec625f;
+$nightBlue: #5557c3;
