--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -57,6 +57,12 @@
     font-weight: 600;
     margin-top: 10px;
     line-height: 1;
+    opacity: 1;
+    transition: opacity .2s;
+    &[disabled]{
+      opacity: .3;
+      transition: opacity .2s;
+    }
   }
 }
 
