--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -84,6 +84,14 @@
   font-size: 14px;
   margin-top: 10px;
   text-align: center;
+
+  input {
+    border: 1px solid #edeef0;
+    border-radius: 5px;
+    width: 100%;
+    padding: 5px 10px;
+    margin-top: 5px;
+  }
 }
 
 .social {
@@ -143,6 +151,7 @@
 }
 
 .blockRight {
+  width: 100%;
   @include r(920) {
     margin-left: 30px;
     margin-top: 10px;
