--- a/src/components/Profile/Posts/Posts.module.scss
+++ b/src/components/Profile/Posts/Posts.module.scss
@@ -15,7 +15,9 @@
 .textarea{
     width: 100%;
     height: 22px;
+    //50px
     transition: width .3s;
+    //box-sizing: border-box;
     @include r(420){
         font-size: 12px;
         height: 18px;
@@ -83,6 +85,7 @@ font-size: 16px;
 
 .textareaWrapper{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     margin-top: 15px;
